--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "A lightweight lib for manipulating HTML5 canvas",
   "author": "Jade Misenas <cjmisenas@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
   "devDependencies": {
     "mocha": "2.2.5",
     "sinon": "1.15.4",
