--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "license": "MIT",
   "devDependencies": {
     "mocha": "2.2.5",
+    "chai": "3.2.0",
     "sinon": "1.15.4",
+    "sinon-chai": "2.8.0",
     "jsdom" : "5.6.1"
+  },
+  "scripts": {
+    "test": "mocha -u tdd --reporter dot"
   },
   "engines": {
     "iojs": "2.3.1"
